# pdf-rag

./: .gitignore  README.md  app.py  docker-compose.yaml  pyproject.toml  requirements.txt
src/configs/: defaults.py
src/helpers/: pdf_processor.py  vector_store_manager.py
src/pdf_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
