[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-rag"
version = "0.1.0"
description = "A RAG system for PDFs with table support."
authors = [
  { name="Your Name", email="you@example.com" },
]
requires-python = ">=3.8"
dependencies = [
    "streamlit",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-huggingface",
    "pdfplumber",
    "PyMuPDF",
    "chromadb",
    "ollama",
]

[project.urls]
"Homepage" = "https://github.com/your-username/pdf-rag"
